// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<span>
  123.00%
</span>
`;

exports[`matches snapshot when highlighted 1`] = `
<strong>
  123.00%
</strong>
`;

exports[`matches snapshot with PL when loss 1`] = `
<span
  className="negative"
>
  -10.00%
</span>
`;

exports[`matches snapshot with PL when neutral 1`] = `
<span
  className="neutral"
>
  0.00%
</span>
`;

exports[`matches snapshot with PL when profit 1`] = `
<span
  className="positive"
>
  10.00%
</span>
`;
